# app/Http/Requests/Api/PollRequest.php
@@ -2,7 +2,9 @@
 
 namespace App\Http\Requests\Api;
 
+use Illuminate\Contracts\Validation\Validator;
 use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Http\Exceptions\HttpResponseException;
 
 class PollRequest extends FormRequest
 {
@@ -13,7 +15,7 @@ class PollRequest extends FormRequest
      */
     public function authorize()
     {
-        return false;
+        return true;
     }
 
     /**
@@ -24,7 +26,16 @@ class PollRequest extends FormRequest
     public function rules()
     {
         return [
-            //
+            'question'=>'required',
+            'answers'=>'required|array|min:1',
+            'answers.*'=>'required',
         ];
+    }
+
+    protected function failedValidation(Validator $validator)
+    {
+        $result = ['status' => 'error' ,'data' => $validator->errors()->all()];
+
+        throw new HttpResponseException(response()->json($result , 400));
     }
 }
