# app/Http/Resources/PollResource.php
@@ -14,6 +14,10 @@ class PollResource extends JsonResource
      */
     public function toArray($request)
     {
-        return parent::toArray($request);
+        return [
+            'id'=>$this->id,
+            'question'=>$this->question,
+            'options'=>OptionResource::collection($this->options),
+        ];
     }
 }
